# cooltraption_playground

./: -  .gitignore  Cargo.toml  README.md  build.rs
crates/cooltraption_assets/: Cargo.toml
crates/cooltraption_assets/src/: lib.rs
crates/cooltraption_assets/src/asset_bundle/: file_asset_loader.rs  mod.rs  sprite_asset.rs  strings_asset.rs  texture_asset.rs
crates/cooltraption_assets/src/texture_atlas/: mod.rs  texture_atlas_builder.rs
crates/cooltraption_input/: Cargo.toml
crates/cooltraption_input/src/: events.rs
crates/cooltraption_input/src/input/: events.rs  keyboard_state.rs  mod.rs  mouse_state.rs
crates/cooltraption_network/: Cargo.toml
crates/cooltraption_network/src/: builder.rs  client.rs  client_storage.rs  common.rs  connection.rs  director.rs  events.rs  lib.rs  network_interface.rs  network_state.rs  network_state_handler.rs  node_event_handler.rs  packets.rs  relay_server.rs  server.rs
crates/cooltraption_network/src/client/: mod.rs
crates/cooltraption_network/src/network_interface/: bootstrapper.rs  messageio_adapter.rs  mod.rs
crates/cooltraption_network/src/server/: mod.rs
crates/cooltraption_render/: Cargo.toml
crates/cooltraption_render/src/: events.rs  lib.rs
crates/cooltraption_render/src/camera/: mod.rs
crates/cooltraption_render/src/camera/controls/: mod.rs
crates/cooltraption_render/src/renderer/: mod.rs  render_event_handler.rs  render_frame.rs  wgpu_state.rs
crates/cooltraption_render/src/renderer/gui/: debug_window.rs  gui_window.rs  mod.rs  widget.rs
crates/cooltraption_render/src/renderer/world_renderer/: gpu_texture_atlas.rs  mesh.rs  mod.rs  render_entity.rs  shader.wgsl  texture_atlas_resource.rs  world_state.rs
crates/cooltraption_render/src/renderer/world_renderer/camera/: camera_state.rs  controls.rs  mod.rs
crates/cooltraption_render/src/renderer/world_renderer/camera/controls/: keyboard_state.rs  mod.rs  mouse_state.rs
crates/cooltraption_render/src/renderer/world_renderer/gizmos/: gizmo.rs  macros.rs  mod.rs  util.rs  vertex.rs
crates/cooltraption_render/src/renderer/world_renderer/gizmos/ellipse/: mod.rs
crates/cooltraption_render/src/renderer/world_renderer/gizmos/rect/: mod.rs
crates/cooltraption_render/src/renderer/world_renderer/interpolator/: drawable.rs  mod.rs  render_entity.rs  time.rs
crates/cooltraption_render/src/renderer/world_renderer/world_state/: drawable.rs  mod.rs  render_entity.rs
crates/cooltraption_render/src/window/: event_handler.rs  mod.rs  window_event_handler.rs
crates/cooltraption_render_example/: Cargo.toml  build.rs
crates/cooltraption_render_example/assets/: cloud.yml  house.yml  plane.yml  texture.yml
crates/cooltraption_render_example/assets/dark/: background.yml
crates/cooltraption_render_example/assets/light/: background.yml  dude.yml  plane.yml
crates/cooltraption_render_example/src/: controller.rs  debug_widget.rs  debug_window.rs  main.rs
crates/cooltraption_render_example/src/controls/: keyboard_state.rs  mouse_state.rs
crates/cooltraption_runtime/: Cargo.toml
crates/cooltraption_runtime/src/: events.rs  factories.rs  lib.rs
crates/cooltraption_runtime/src/configurators/: common_configurators.rs  mod.rs  renderer_configurator.rs
crates/cooltraption_runtime/src/render_component/: controller.rs  mod.rs
crates/cooltraption_runtime/src/render_component/controls/: keyboard_state.rs  mouse_state.rs
crates/cooltraption_runtime_example/: Cargo.toml
crates/cooltraption_runtime_example/src/: directors.rs  factories.rs  main.rs  render_component.rs  sfml_component.rs
crates/cooltraption_runtime_example/src/render_component/: controller.rs  events.rs  mod.rs
crates/cooltraption_runtime_example/src/render_component/controls/: keyboard_state.rs  mod.rs
crates/cooltraption_server/: Cargo.toml
crates/cooltraption_server/src/: main.rs
crates/cooltraption_simulation/: Cargo.toml
crates/cooltraption_simulation/src/: action.rs  builders.rs  components.rs  events.rs  lib.rs  simulation.rs  simulation_state.rs
crates/cooltraption_simulation/src/builder/: directors.rs  mod.rs
crates/cooltraption_simulation/src/simulation_state/: file_simulation_loader.rs
crates/cooltraption_simulation/src/stages/: action_stage.rs  mod.rs  physics_stage.rs
crates/cooltraption_simulation/src/system_sets/: action_set.rs  mod.rs  physics_set.rs
crates/cooltraption_window/: Cargo.toml
crates/cooltraption_window/src/: events.rs  lib.rs
crates/cooltraption_window/src/asset_bundle/: file_asset_loader.rs  mod.rs  strings_asset.rs  texture_asset.rs
crates/cooltraption_window/src/asset_bundle/texture_atlas/: mod.rs  texture_atlas_builder.rs
crates/cooltraption_window/src/camera/: camera_state.rs  controller.rs  mod.rs
crates/cooltraption_window/src/camera/controls/: keyboard_state.rs  mouse_state.rs
crates/cooltraption_window/src/camera/input_device/: keyboard_state.rs  mod.rs  mouse_state.rs
crates/cooltraption_window/src/gui/: debug_window.rs  gui_window.rs  mod.rs
crates/cooltraption_window/src/render/: camera.rs  instance.rs  instance_renderer.rs  keyboard_state.rs  mod.rs  render_batch.rs  render_event_handler.rs  render_frame.rs  shader.wgsl  uninitialized_wgpu_state.rs  wgpu_state.rs  world_state.rs
crates/cooltraption_window/src/render/gui/: debug_window.rs  gui_window.rs  mod.rs
crates/cooltraption_window/src/render/instance_renderer/: instance.rs  mod.rs  render_instance.rs  world_state.rs
crates/cooltraption_window/src/render/instance_renderer/texture_atlas/: texture_atlas_builder.rs
crates/cooltraption_window/src/render/texture_atlas/: mod.rs  texture_atlas_builder.rs
crates/cooltraption_window/src/render/world_renderer/: mod.rs  render_entity.rs  world_state.rs
crates/cooltraption_window/src/window/: camera.rs  controls.rs  event_handler.rs  keyboard_state.rs  mod.rs  wgpu_state.rs  window_event_handler.rs
crates/cooltraption_window_example/: Cargo.toml
crates/cooltraption_window_example/assets/: 1000x1000.yml  dude.yml  house.yml
crates/cooltraption_window_example/src/: controller.rs  main.rs
src/: engine.rs  (+4 more)
(+49 files in other folders)
