[package]
name = "cooltraption_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bevy_ecs = "0.9"
bevy_reflect = "0.9"
glam = "0.22"
wgpu = "0.14"
pollster = "0.2"
winit = "0.27"
bytemuck = { version = "1.4", features = [ "derive" ] }

[build-dependencies]
copy_to_output = "2.0"
glob = "0.3"
