[package]
name = "cooltraption_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooltraption_render = {path = "../cooltraption_render"}
cooltraption_window = {path = "../cooltraption_window"}
cooltraption_common = {path = "../cooltraption_common"}

log = "0.4"
env_logger = "0.10"
