[package]
name = "cooltraption_network"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
fixed = "1.21"
fixed-macro = "1.1"
num-traits = "0.2"
message-io = "0.15.0"

[build-dependencies]
copy_to_output = "2.0"
glob = "0.3"
