[package]
name = "cooltraption_render_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooltraption_render = { path = "../cooltraption_render", features = ["debug", "missing"] }
cooltraption_window = { path = "../cooltraption_window" }
cooltraption_common = { path = "../cooltraption_common" }
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
cgmath = "0.18"

[build-dependencies]
cargo-emit = "0.2"
glob = "0.3"
