[package]
name = "cooltraption_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooltraption_simulation = { path = "../cooltraption_simulation" }
cooltraption_window = { path = "../cooltraption_window" }

pipeline_rs = { git = "https://github.com/NoNaim95/pipeline_rs", branch = "master" }
