[package]
name = "cooltraption_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooltraption_simulation = { path = "../cooltraption_simulation" }
cooltraption_render = { path = "../cooltraption_render" }
cooltraption_window = { path = "../cooltraption_window" }
cooltraption_input = { path = "../cooltraption_input" }
cooltraption_common = { path = "../cooltraption_common" }
#cooltraption_network = { path = "../cooltraption_network" }

pipeline_rs = { git = "https://github.com/NoNaim95/pipeline_rs", branch = "master" }
smart-default = "0.7.1"

tokio = "1.28.0"

cgmath = "0.18.0"


serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

rand = "0.8.5"
derive_builder = "0.12.0"
