[package]
name = "cooltraption_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooltraption_network = { path = "../cooltraption_network" }
cooltraption_simulation = { path = "../cooltraption_simulation" }
