[package]
name = "cooltraption_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
bevy_ecs = "0.9"
bevy_reflect = "0.9"
nalgebra = "0.32"
simba = "0.7"
fixed = "1.21"
fixed-macro = "1.1"
num-traits = "0.2"

[build-dependencies]
copy_to_output = "2.0"
glob = "0.3"
