[package]
name = "cooltraption_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooltraption_common = { path = "../cooltraption_common" }

log = "0.4"
env_logger = "0.10"
bevy_ecs = "0.10"
bevy_reflect = "0.9"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
simba = { version = "0.8.1", features = [
    "default",
    "fixed",
    "partial_fixed_point_support",
    "serde_serialize",
    "serde",
] }
fixed = { version = "1.23.1", features = ["serde"] }
fixed-macro = "1.1"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.71"

derive_more = "0.99.17"

getset = "0.1.2"
derive_builder = "0.12.0"
