[package]
name = "cooltraption_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
log = "0.4"
env_logger = "0.10"
cgmath = "0.18"
num-traits = "0.2"
tokio = { version = "1", features = ["full"] }

# assets
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
image = "0.24"
as-any = "0.3"

# rendering
wgpu = "^0.15"
pollster = "0.2"
winit = "^0.28"
bytemuck = { version = "1.4", features = [ "derive" ] }
guillotiere = "0.6.2" # texture atlas

# gui
egui = "0.21"
egui_winit_platform = "0.18"
egui_wgpu_backend = "0.22"

[build-dependencies]
copy_to_output = "2.0"
glob = "0.3"
