[package]
name = "cooltraption_window_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
cgmath = "0.18"
cooltraption_window = { path = "../cooltraption_window", features = ["debug"] }
cooltraption_assets = { path = "../cooltraption_assets", features = ["debug", "missing"] }

[build-dependencies]
cargo-emit = "0.2"
glob = "0.3"
